# wikiman

./: .copier-answers.yml  .coveragerc  .flake8  .gitignore  CHANGELOG.md  README.md  dev_requirements.txt  generate_random_pages.py  install_dev_requirements.ps1  package-lock.json  pyproject.toml  pyrightconfig.json  requirements_dev.txt  requirements_lint.txt  setup.ps1  setup.py  setup_cicd.sh
.config/: ci_requirements.txt  dev_requirements.txt  install_dev_requirements.ps1  lint.ini
.github/: dependabot.yml
.github/workflows/: changerelease.yml  codecov.yml  codeql-analysis.yml  main.yml  python-publish.yml
src/wikiman/: __init__.py  api.py  cli.py  common.py  family.py  utils.py  wikiman.py
tests/: _conftest.py  conftest.py  test_api.py  test_family.py  test_utils.py  test_wikiman.py
tests/test_wikiman/: Home.md
tests/wiki/: Home.md
tooling/: requirements.txt  setup.ps1  setup_cicd.sh
