# See https://flit.readthedocs.io/en/latest/pyproject_toml.html for more fields.

[build-system]
requires = ["flit_core >=3.3,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wikiman"
requires-python = ">=3.9"
dependencies = ["fire~=0.4", "markdown~=3.3", "GitPython~=3.1"]
authors = [{ name = "Blake Naccarato", email = "blake.naccarato+wikiman@gmail.com" }]
dynamic = ["version", "description"]
readme = "README.md"

[project.scripts]
wikiman = "wikiman.cli:main"

[project.urls]
Home = "https://github.com/blakeNaccarato/wikiman"

# Workaround for flit 3.3.0 https://github.com/takluyver/flit/issues/432
[project.optional-dependencies]
