[build-system]
requires = ["flit_core >=3.3,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wikiman"
requires-python = ">=3.9"
dependencies = ["fire~=0.4", "markdown~=3.3", "GitPython~=3.1"]
dynamic = ["version", "description"]
readme = "README.md"
[[project.authors]]
name = "Blake Naccarato"
email = "blake.naccarato+wikiman@gmail.com"

[project.scripts]
wikiman = "wikiman.cli:main"

[project.urls]
Home = "https://github.com/blakeNaccarato/wikiman"

[project.optional-dependencies]
